Add favicon images: include 16x16 and 32x32 PNG files for improved site icon display

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'images/favicon-16x16.png' %}">
     
     {% block extra_css %}{% endblock %}
 </head>
