--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,13 @@ body {
     background-color: var(--cream);
     color: var(--text-medium);
     line-height: 1.6;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+html {
+    height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -377,6 +384,7 @@ footer {
     color: var(--cream);
     padding: 2rem 0;
     margin-top: 4rem;
+    margin-top: auto;
 }
 
 footer a {
